[package]
name = "addition"
version = "0.1.0"
edition = "2021"

[lib]
name = "addition"
crate-type = ["staticlib"]

[dependencies]
mlua = { git = 'https://github.com/AO-ZKP/mlua', branch = 'no-std-module', features = ["lua53", "module"], default-features = false }

[profile.dev]
panic = "abort"

[profile.release]
debug = true
panic = "abort"
